# book_store

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  github-actions-demo.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories_order.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializers.py
order/tests/: test_factories_order.py  test_order.py  test_order_serializer.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  factories_product.py  urls.py
product/migrations/: 0001_initial.py  0002_product_user.py  0003_product_product.py  0004_remove_product_product.py  0005_remove_product_user.py  0006_product_products_id.py  0007_alter_product_price.py  0008_remove_product_products_id.py  0009_product_products_id.py  0010_remove_product_products_id.py  0011_alter_product_price.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/: test_category.py  test_category_serializer.py  test_category_viewset.py  test_product.py  test_product_serializer.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
