[tool.poetry]
name = "book-store"
version = "0.1.0"
description = "Bookstore API"
authors = ["William <williamfs133@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
factory-boy = "^3.3.0"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-rest-framework = "^0.1.0"
faker = "^25.3.0"
django-factory = "^0.11"
pytest-django = "^4.8.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.2"
flake8 = "^7.0.0"
whitenoise = "^6.6.0"
gunicorn = "^22.0.0"
django-heroku = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
